--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/lab": "^6.0.0-beta.30",
     "@mui/material": "^6.4.7",
+    "@mui/x-date-pickers": "^5.0.20",
+    "date-fns": "^2.29.3",
     "framer-motion": "^12.4.10",
     "localforage": "^1.10.0",
     "react": "^19.0.0",
